# OSCS-Task

./: CMakeLists.txt  README.md
.github/workflows/: oscs.yml
include/: oscs_client.h  oscs_server.h
lib/: CMakeLists.txt  oscs_client.c  oscs_server.c
src/: CMakeLists.txt  client.c  server.c
